fix form width, now i have to fix the results alignment

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -13,7 +13,7 @@ $font-grey: #4a4a4a;
   }
 }
 @mixin desktop {
-  @media (min-width: 1200) {
+  @media (min-width: 1200px) {
     @content;
   }
 }
