--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -16,6 +16,10 @@
     height: 300px;
     padding: 90px 0px;
   }
+
+  @include desktop {
+    font-size: 20px;
+  }
   & .footer__made {
     color: $font-grey;
   }
