--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,6 +14,9 @@
     @include tablet {
       font-size: 190px;
     }
+    @include desktop {
+      margin-left: 20px;
+    }
   }
 
   &__subtitle {
@@ -25,6 +28,9 @@
 
     @include tablet {
       font-size: 53px;
+    }
+    @include desktop {
+      margin-left: 20px;
     }
   }
 
@@ -41,11 +47,19 @@
       transform: rotate(-90deg) translate3d(-450px, 0, 0);
     }
 
+    @include desktop {
+      transform: rotate(-90deg) translate3d(-315px, 0, 0);
+    }
+
     &__arrow {
       display: inline-flex;
 
       @include tablet {
         margin-left: 180px;
+      }
+
+      @include desktop {
+        margin-left: 170px;
       }
 
       span {
