--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -6,6 +6,10 @@
   @include tablet {
   }
 
+  @include desktop {
+    margin-bottom: 40px;
+  }
+
   .form {
     padding-bottom: 80px;
     display: flex;
@@ -15,6 +19,10 @@
 
     @include tablet {
       margin-top: 60px;
+    }
+
+    @include desktop {
+      width: 90%;
     }
 
     &__input {
@@ -48,12 +56,32 @@
     &__button {
       color: $arrow-white;
       border-style: none;
-      border-radius: 4px;
+
       // font-family: $font-main;
       // text-transform: uppercase;
       margin-top: 14px;
-      box-shadow: 1px 1.5px;
 
+      cursor: pointer;
+      height: 60px;
+      border-radius: 20px;
+      width: 50px;
+      font-size: 40px;
+      background-color: white;
+      box-shadow: 0px 0px;
+
+      @include tablet {
+        margin-left: -100px;
+      }
+
+      @include desktop {
+        height: 60px;
+        border-radius: 20px;
+        width: 50px;
+        font-size: 40px;
+        background-color: white;
+        box-shadow: 0px 0px;
+        margin-left: -200px;
+      }
       /*Transición botón buscar*/
       transition: box-shadow linear 0.3s, background-color linear 0.3s;
 
@@ -74,7 +102,11 @@
   @include tablet {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+  }
+
+  @include desktop {
+    width: 1200px;
   }
 }
 
@@ -82,6 +114,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  @include desktop {
+    width: 700px;
+  }
 
   &--title {
     text-align: center;
@@ -100,6 +136,11 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    @include tablet {
+      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
 
     &--li {
       margin: 25px auto;
@@ -211,7 +252,7 @@
 
     @include tablet {
       border-radius: 90px;
-      width: 80%;
+      width: 100px;
       margin-top: 80px;
     }
 
@@ -232,4 +273,11 @@
   width: 210px;
   padding: 0px 12px 20px;
   box-shadow: #5c0303ab 1.5px 1.5px;
+  cursor: pointer;
+  @include tablet {
+    margin: 25px auto;
+    cursor: pointer;
+
+    font-size: 20px;
+  }
 }
